# auto-video-checkout

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
assigning/: assign.py  hand.py  interaction.py  person.py  product.py  utils.py
costumer/: costumer.py  purchase.py  store.py  transaction.py  utils.py
detection/: README.md  detections.py  onnx_model.py  utils.py
location/: products.py  table.py  table_points.py  utils.py
location/transforms/: table_persp_mtx_v1.npy
models/: used_models.txt
source/: read_image.py  read_video.py  source.py  utils.py
tracking/: norfair_tracker.py
